tests/baselines/reference/classExpressionInLoop.errors.txt
tests/cases/conformance/classes/classExpressions/classExpressionInLoop.ts(5,9): error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.


==== tests/cases/conformance/classes/classExpressions/classExpressionInLoop.ts (1 errors) ====
    let arr = [];
    for (let i = 0; i < 5; ++i) 
        arr.push(class C {
            static hello = () => i;
            [i] = i;
            ~~~
!!! error TS1166: A computed property name in a class property declaration must refer to an expression whose type is a literal type or a 'unique symbol' type.
        });
    